--- a/portfolio.html
+++ b/portfolio.html
@@ -1,41 +1,148 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Header -->
     <header>
-        <a href="/">WebStudio</a>
-        <nav>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a> </li>
-            </ul>
-        </nav>
+      <a href="/">WebStudio</a>
+      <nav>
         <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+38 096 111 11 11</a></li>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
+      </nav>
+      <ul>
+        <li><a href="">info@devstudio.com</a></li>
+        <li><a href="">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <!-- Main -->
-<main>
+    <main>
+      <section>
+        <h1>Примеры работ</h1>
+        <ul>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложения</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="">
+              <img
+                src="./images/technokryak.jpg"
+                alt="Макбук с фотографиями команды"
+                width="370"
+                height="294"
+              />
+              <h2>Технокряк</h2>
+              <p>Веб-сайт</p>
+            </a>
+          </li>
 
-</main>
-<!-- Footer -->
-<footer>
-    <a href="/">WebStudio</a>
-   <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <ul>
-                <li><a href="">info@example.com</a></li>
-                <li><a href="">+38 099 111 11 11</a></li>
-            </ul>      
-   </address>
-</footer>
-</body>
+          <li>
+            <a href="">
+              <img
+                src="./images/poster.jpg"
+                alt="Постер с двумя баскетболистами"
+                width="370"
+                height="294"
+              />
+              <h2>Постер New Orlean vs Golden Star</h2>
+              <p>Дизайн</p>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <img src="./images/seafood.jpg" alt="Логотип ресторана" width="370" height="294" />
+              <h2>Ресторан Seafood</h2>
+              <p>Приложение</p>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <img src="./images/prime.jpg" alt="Наушники" width="370" height="294" />
+              <h2>Проект Prime</h2>
+              <p>Маркетинг</p>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <img src="./images/boxes.jpg" alt="Две коробки" width="370" height="294" />
+              <h2>Проект Boxes</h2>
+              <p>Приложение</p>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <img
+                src="./images/inspiration.jpg"
+                alt="Веб-страница на мониторе"
+                width="370"
+                height="294"
+              />
+              <h2 lang="en">Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <img
+                src="./images/limitededition.jpg"
+                alt="Открытая книга"
+                width="370"
+                height="294"
+              />
+              <h2 lang="en">Издание Limited Edition</h2>
+              <p>Дизайн</p>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <img src="./images/lab.jpg" alt="Бирка на шнурке" width="370" height="294" />
+              <h2>Проект LAB</h2>
+              <p>Маркетинг</p>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <img
+                src="./images/growingbusiness.jpg"
+                alt="Человек печатает на ноутбуке"
+                width="370"
+                height="294"
+              />
+              <h2>Growing Business</h2>
+              <p>Приложение</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!-- Footer -->
+    <footer>
+      <a href="/">WebStudio</a>
+      <address>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <ul>
+          <li><a href="">info@example.com</a></li>
+          <li><a href="">+38 099 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
