--- a/index.html
+++ b/index.html
@@ -1,106 +1,123 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
     <!-- Header -->
-    <header>
-        <a href="/">WebStudio</a>
-        <nav>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a> </li>
-            </ul>
-        </nav>
-        <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+38 096 111 11 11</a></li>
+    <header class="header">
+      <a href="/" class="logo-header"><span>Web</span>Studio</a>
+      <nav>
+        <ul class="header-nav">
+          <li><a class="nav-link" href="./index.html">Студия</a></li>
+          <li><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="nav-link" href="">Контакты</a></li>
         </ul>
+      </nav>
+      <ul class="header-contacts">
+        <li><a class="contacts-link" href="">info@devstudio.com</a></li>
+        <li><a class="contacts-link" href="">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <!-- Main -->
-<main>
-        <section>
-            <h1>
-                Эффективные решения <br> для вашего бизнеса
-            </h1>
-            <button type="button">Заказать услугу</button>
-        </section>
-        <section>
-            <h2>Особенности</h2>
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции</p>
-                </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li>
-                        <img src="./images/wwd1.jpg" alt="Человек печатает на клавиатуре" width="370" height="294">
-                </li>
-                <li>
-                        <img src="./images/wwd2.jpg" alt="Человек держит смартфон" width="370" height="294">
-                </li>
-                <li>
-                        <img src="./images/wwd3.jpg" alt="Человек держит планшет" width="370" height="294">
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
-                    <img src="./images/dem'yanenko.jpg" alt="Продакт дизайнер" width="270" height="260">
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/repina.jpg" alt="Фронтенд разработчик" width="270" height="260">
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/tarasov.jpg" alt="Маркетолог" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/ermakov.jpg" alt="Дизайнер интерфейса" width="270" height="260">
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
-        </section>
-</main>
-<!-- Footer -->
-<footer>
-    <a href="/">WebStudio</a>
-   <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <ul>
-                <li><a href="">info@example.com</a></li>
-                <li><a href="">+38 099 111 11 11</a></li>
-            </ul>      
-   </address>
-</footer>
-</body>
+    <main>
+      <section>
+        <h1>
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
+        <button type="button">Заказать услугу</button>
+      </section>
+      <section>
+        <h2>Особенности</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции</p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/wwd1.jpg"
+              alt="Человек печатает на клавиатуре"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img src="./images/wwd2.jpg" alt="Человек держит смартфон" width="370" height="294" />
+          </li>
+          <li>
+            <img src="./images/wwd3.jpg" alt="Человек держит планшет" width="370" height="294" />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/dem'yanenko.jpg" alt="Продакт дизайнер" width="270" height="260" />
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/repina.jpg" alt="Фронтенд разработчик" width="270" height="260" />
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/tarasov.jpg" alt="Маркетолог" width="270" height="260" />
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/ermakov.jpg" alt="Дизайнер интерфейса" width="270" height="260" />
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!-- Footer -->
+    <footer>
+      <a href="/" class="logo-footer"><span>Web</span>Studio</a>
+      <address>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <ul>
+          <li><a href="">info@example.com</a></li>
+          <li><a href="">+38 099 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
