--- a/portfolio.html
+++ b/portfolio.html
@@ -5,21 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
-    <header>
-      <a href="/">WebStudio</a>
+    <header class="header">
+      <a href="/" class="logo-header"><span>Web</span>Studio</a>
       <nav>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="header-nav">
+          <li><a class="nav-link" href="./index.html">Студия</a></li>
+          <li><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="nav-link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+38 096 111 11 11</a></li>
+      <ul class="header-contacts">
+        <li><a class="contacts-link" href="">info@devstudio.com</a></li>
+        <li><a class="contacts-link" href="">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <!-- Main -->
@@ -135,7 +142,7 @@
     </main>
     <!-- Footer -->
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="/" class="logo-footer"><span>Web</span>Studio</a>
       <address>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
