Добавляет разметку Main главной страницы

--- a/index.html
+++ b/index.html
@@ -36,36 +36,40 @@
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button type="button">Заказать услугу</button>
+        <button class="hero-button" type="button">Заказать услугу</button>
       </section>
-      <section>
+      <section class="peculiarities">
         <h2>Особенности</h2>
-        <ul>
+        <ul class="peculiarities-list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции</p>
+            <h3 class="peculiarities-heading">Внимание к деталям</h3>
+            <p class="peculiarities-par">
+              Идейные соображения, а также начало повседневной работы по формированию позиции
+            </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="peculiarities-heading">Пунктуальность</h3>
+            <p class="peculiarities-par">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="peculiarities-heading">Планирование</h3>
+            <p class="peculiarities-par">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="peculiarities-heading">Современные технологии</h3>
+            <p class="peculiarities-par">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="rubrics">Чем мы занимаемся</h2>
+        <ul class="rubrics-examples">
           <li>
             <img
               src="./images/wwd1.jpg"
@@ -83,27 +87,27 @@
         </ul>
       </section>
       <section>
-        <h2>Наша команда</h2>
-        <ul>
+        <h2 class="rubrics">Наша команда</h2>
+        <ul class="rubrics-team">
           <li>
             <img src="./images/dem'yanenko.jpg" alt="Продакт дизайнер" width="270" height="260" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="staff-names">Игорь Демьяненко</h3>
+            <p class="staff-professions">Product Designer</p>
           </li>
           <li>
             <img src="./images/repina.jpg" alt="Фронтенд разработчик" width="270" height="260" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="staff-names">Ольга Репина</h3>
+            <p class="staff-professions">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/tarasov.jpg" alt="Маркетолог" width="270" height="260" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="staff-names">Николай Тарасов</h3>
+            <p class="staff-professions">Marketing</p>
           </li>
           <li>
             <img src="./images/ermakov.jpg" alt="Дизайнер интерфейса" width="270" height="260" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="staff-names">Михаил Ермаков</h3>
+            <p class="staff-professions">UI Designer</p>
           </li>
         </ul>
       </section>
