--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
       <a href="/" class="logo-footer"><span>Web</span>Studio</a>
       <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <ul>
-          <li><a href="">info@example.com</a></li>
-          <li><a href="">+38 099 111 11 11</a></li>
+        <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+        <ul class="footer-contacts">
+          <li><a class="mail-phone" href="">info@example.com</a></li>
+          <li><a class="mail-phone" href="">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
