--- a/portfolio.html
+++ b/portfolio.html
@@ -33,108 +33,108 @@
     <main>
       <section>
         <h1>Примеры работ</h1>
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <ul class="filter">
+          <li><button class="filter-button" type="button">Все</button></li>
+          <li><button class="filter-button" type="button">Веб-сайты</button></li>
+          <li><button class="filter-button" type="button">Приложения</button></li>
+          <li><button class="filter-button" type="button">Дизайн</button></li>
+          <li><button class="filter-button" type="button">Маркетинг</button></li>
         </ul>
-        <ul>
+        <ul class="example-list">
           <li>
-            <a href="">
+            <a class="example-links" href="">
               <img
                 src="./images/technokryak.jpg"
                 alt="Макбук с фотографиями команды"
                 width="370"
                 height="294"
               />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+              <h2 class="example-items">Технокряк</h2>
+              <p class="example-paragraph">Веб-сайт</p>
             </a>
           </li>
 
           <li>
-            <a href="">
+            <a class="example-links" href="">
               <img
                 src="./images/poster.jpg"
                 alt="Постер с двумя баскетболистами"
                 width="370"
                 height="294"
               />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
+              <h2 class="example-items">Постер New Orlean vs Golden Star</h2>
+              <p class="example-paragraph">Дизайн</p>
             </a>
           </li>
 
           <li>
-            <a href="">
+            <a class="example-links" href="">
               <img src="./images/seafood.jpg" alt="Логотип ресторана" width="370" height="294" />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p>
+              <h2 class="example-items">Ресторан Seafood</h2>
+              <p class="example-paragraph">Приложение</p>
             </a>
           </li>
 
           <li>
-            <a href="">
+            <a class="example-links" href="">
               <img src="./images/prime.jpg" alt="Наушники" width="370" height="294" />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p>
+              <h2 class="example-items">Проект Prime</h2>
+              <p class="example-paragraph">Маркетинг</p>
             </a>
           </li>
 
           <li>
-            <a href="">
+            <a class="example-links" href="">
               <img src="./images/boxes.jpg" alt="Две коробки" width="370" height="294" />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p>
+              <h2 class="example-items">Проект Boxes</h2>
+              <p class="example-paragraph">Приложение</p>
             </a>
           </li>
 
           <li>
-            <a href="">
+            <a class="example-links" href="">
               <img
                 src="./images/inspiration.jpg"
                 alt="Веб-страница на мониторе"
                 width="370"
                 height="294"
               />
-              <h2 lang="en">Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <h2 class="example-items" lang="en">Inspiration has no Borders</h2>
+              <p class="example-paragraph">Веб-сайт</p>
             </a>
           </li>
 
           <li>
-            <a href="">
+            <a class="example-links" href="">
               <img
                 src="./images/limitededition.jpg"
                 alt="Открытая книга"
                 width="370"
                 height="294"
               />
-              <h2 lang="en">Издание Limited Edition</h2>
-              <p>Дизайн</p>
+              <h2 class="example-items" lang="en">Издание Limited Edition</h2>
+              <p class="example-paragraph">Дизайн</p>
             </a>
           </li>
 
           <li>
-            <a href="">
+            <a class="example-links" href="">
               <img src="./images/lab.jpg" alt="Бирка на шнурке" width="370" height="294" />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p>
+              <h2 class="example-items">Проект LAB</h2>
+              <p class="example-paragraph">Маркетинг</p>
             </a>
           </li>
 
           <li>
-            <a href="">
+            <a class="example-links" href="">
               <img
                 src="./images/growingbusiness.jpg"
                 alt="Человек печатает на ноутбуке"
                 width="370"
                 height="294"
               />
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
+              <h2 class="example-items">Growing Business</h2>
+              <p class="example-paragraph">Приложение</p>
             </a>
           </li>
         </ul>
