--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <a href="/" class="logo-header"><span>Web</span>Studio</a>
+      <a href="/" class="header-logo"><span>Web</span>Studio</a>
       <nav>
         <ul class="header-nav">
           <li><a class="nav-link" href="./index.html">Студия</a></li>
@@ -142,7 +142,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="/" class="logo-footer"><span>Web</span>Studio</a>
+      <a href="/" class="footer-logo"><span>Web</span>Studio</a>
       <address>
         <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
         <ul class="footer-contacts">
