--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="/" class="header-logo"><span>Web</span>Studio</a>
       <nav>
         <ul class="header-nav">
-          <li><a class="nav-link" href="./index.html">Студия</a></li>
+          <li><a class="nav-link current" href="./index.html">Студия</a></li>
           <li><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
           <li><a class="nav-link" href="">Контакты</a></li>
         </ul>
