--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
       <nav>
         <ul class="header-nav">
           <li><a class="nav-link" href="./index.html">Студия</a></li>
-          <li><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="nav-link current" href="./portfolio.html">Портфолио</a></li>
           <li><a class="nav-link" href="">Контакты</a></li>
         </ul>
       </nav>
