Добавляет "пользовательские" контакты и скрывает логические заголовки секций

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </ul>
       </nav>
       <ul class="header-contacts">
-        <li><a class="contacts-link" href="">info@devstudio.com</a></li>
-        <li><a class="contacts-link" href="">+38 096 111 11 11</a></li>
+        <li><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <!-- Main -->
@@ -39,7 +39,7 @@
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
       <section class="peculiarities">
-        <h2>Особенности</h2>
+        <h2 hidden>Особенности</h2>
         <ul class="peculiarities-list">
           <li>
             <h3 class="peculiarities-heading">Внимание к деталям</h3>
@@ -116,10 +116,16 @@
     <footer class="footer">
       <a href="/" class="footer-logo"><span>Web</span>Studio</a>
       <address>
-        <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+        <a
+          href="https://goo.gl/maps/oCxzyHue8FhfwhSUA"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="footer-address"
+          >г. Киев, пр-т Леси Украинки, 26</a
+        >
         <ul class="footer-contacts">
-          <li><a class="mail-phone" href="">info@example.com</a></li>
-          <li><a class="mail-phone" href="">+38 099 111 11 11</a></li>
+          <li><a class="mail-phone" href="mailto:info@devstudio.com">info@example.com</a></li>
+          <li><a class="mail-phone" href="tel:+380961111111">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
