--- a/portfolio.html
+++ b/portfolio.html
@@ -25,14 +25,14 @@
         </ul>
       </nav>
       <ul class="header-contacts">
-        <li><a class="contacts-link" href="">info@devstudio.com</a></li>
-        <li><a class="contacts-link" href="">+38 096 111 11 11</a></li>
+        <li><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <!-- Main -->
     <main>
       <section>
-        <h1>Примеры работ</h1>
+        <h1 hidden>Примеры работ</h1>
         <ul class="filter">
           <li><button class="filter-button" type="button">Все</button></li>
           <li><button class="filter-button" type="button">Веб-сайты</button></li>
@@ -144,10 +144,16 @@
     <footer class="footer">
       <a href="/" class="footer-logo"><span>Web</span>Studio</a>
       <address>
-        <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+        <a
+          href="https://goo.gl/maps/oCxzyHue8FhfwhSUA"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="footer-address"
+          >г. Киев, пр-т Леси Украинки, 26</a
+        >
         <ul class="footer-contacts">
-          <li><a class="mail-phone" href="">info@example.com</a></li>
-          <li><a class="mail-phone" href="">+38 099 111 11 11</a></li>
+          <li><a class="mail-phone" href="mailto:info@devstudio.com">info@example.com</a></li>
+          <li><a class="mail-phone" href="tel:+380961111111">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
